Script: refactor function clickManagerBtnNo Avoiding button get out of screen Delete some styles and add position relative to body tag

--- a/docs/css/btnNo.css
+++ b/docs/css/btnNo.css
@@ -7,8 +7,6 @@
 /* *********** */
 .wheel-and-hamster {
   --dur: 1s;
-  position: relative;
-  width: 12em;
   font-size: 14px;
 }
 
