--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  position: relative;
+}
+
 .mainBox.hide {
   display: none;
 }
@@ -6,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100%;g
 
   position: relative;
 }
